<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.setting.SettingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_gray"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:paddingTop="@dimen/dp_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_100"
                    android:layout_weight="1"
                    android:paddingVertical="@dimen/dp_16"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/dp_2"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <vn.techres.android.weather.widget.AppTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/app_name"
                        android:textSize="@dimen/sp_24"
                        android:textColor="@color/blue_900"/>

                    <vn.techres.android.weather.widget.AppTextView
                        android:id="@+id/tvAddressLocation"
                        style="@style/TextMarquee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue_700"
                        android:textSize="@dimen/sp_16"
                        tools:text="so 12 thị trấn phú mỹ tỉnh đồng tháp " />
                </LinearLayout>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/bg_gray"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_gray"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_1"
                        android:background="@color/white"
                        android:orientation="vertical">
                        <vn.techres.android.weather.widget.AppTextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.01"
                            android:paddingVertical="@dimen/dp_4"
                            android:paddingStart="@dimen/dp_16"
                            android:text="@string/common"
                            android:textColor="@color/blue_700" />
                        <LinearLayout
                            android:id="@+id/llLocationManager"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/white"
                                android:paddingEnd="@dimen/dp_16"
                                android:paddingVertical="@dimen/dp_16"
                                tools:ignore="RtlSymmetry">

                                <ImageView
                                    android:layout_width="@dimen/dp_24"
                                    android:layout_height="@dimen/dp_24"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginHorizontal="@dimen/dp_16"
                                    android:src="@drawable/ic_location"
                                    app:tint="@color/blue_500" />

                                <vn.techres.android.weather.widget.AppTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1"
                                    android:text="@string/control_location"
                                    android:textSize="@dimen/sp_18"
                                    android:textColor="@color/black" />

                                <ImageView
                                    android:layout_width="@dimen/dp_32"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:src="@drawable/ic_next_white"
                                    tools:ignore="ContentDescription" />
                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp_0_5"
                                android:background="@color/bg_gray" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llEnvironmentManager"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="visible">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/white"
                                android:paddingTop="@dimen/dp_16"
                                android:paddingEnd="@dimen/dp_16"
                                android:paddingBottom="@dimen/dp_16"
                                tools:ignore="RtlSymmetry">

                                <ImageView
                                    android:layout_width="@dimen/dp_24"
                                    android:layout_height="@dimen/dp_24"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginHorizontal="@dimen/dp_16"
                                    android:src="@drawable/home_selected"
                                    tools:ignore="ContentDescription"
                                    app:tint="@color/blue_500"/>

                                <vn.techres.android.weather.widget.AppTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1"
                                    android:text="@string/setting_environment"
                                    android:textSize="@dimen/sp_18"
                                    android:textColor="@color/black" />

                                <ImageView
                                    android:layout_width="@dimen/dp_32"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:src="@drawable/ic_next_white"
                                    tools:ignore="ContentDescription" />
                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp_0_5"
                                android:background="@color/bg_gray" />

                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/llAQI"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/white"
                                android:paddingTop="@dimen/dp_16"
                                android:paddingEnd="@dimen/dp_16"
                                android:paddingBottom="@dimen/dp_16"
                                tools:ignore="RtlSymmetry">

                                <ImageView
                                    android:layout_width="@dimen/dp_24"
                                    android:layout_height="@dimen/dp_24"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginHorizontal="@dimen/dp_16"
                                    android:src="@drawable/ic_facemark"
                                    tools:ignore="ContentDescription" />
                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <vn.techres.android.weather.widget.AppTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/AQI_number"
                                        android:textSize="@dimen/sp_18"
                                        android:textColor="@color/black"
                                        tools:ignore="TooDeepLayout" />
                                </LinearLayout>
                                <ImageView
                                    android:layout_width="@dimen/dp_32"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:src="@drawable/ic_next_white"
                                    tools:ignore="ContentDescription" />
                            </LinearLayout>



                        </LinearLayout>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_1"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <vn.techres.android.weather.widget.AppTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingVertical="@dimen/dp_4"
                            android:paddingStart="@dimen/dp_16"
                            android:text="@string/infor_app"
                            android:textColor="@color/blue_700" />

                        <LinearLayout
                            android:id="@+id/llFeedback"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/white"
                                android:paddingTop="@dimen/dp_16"
                                android:paddingEnd="@dimen/dp_16"
                                android:paddingBottom="@dimen/dp_16"
                                tools:ignore="RtlSymmetry">

                                <ImageView
                                    android:layout_width="@dimen/dp_24"
                                    android:layout_height="@dimen/dp_24"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginHorizontal="@dimen/dp_16"
                                    android:src="@drawable/ic_block_hand_holding_heart"
                                    tools:ignore="ContentDescription" />

                                <vn.techres.android.weather.widget.AppTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1"
                                    android:text="@string/terms_of_use"
                                    android:textSize="@dimen/sp_18"
                                    android:textColor="@color/black" />

                                <ImageView
                                    android:layout_width="@dimen/dp_32"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:src="@drawable/ic_next_white"
                                    tools:ignore="ContentDescription" />
                            </LinearLayout>



                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_0_5"
                            android:background="@color/bg_gray" />
                        <LinearLayout
                            android:id="@+id/llInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/white"
                                android:paddingTop="@dimen/dp_16"
                                android:paddingEnd="@dimen/dp_16"
                                android:paddingBottom="@dimen/dp_16"
                                tools:ignore="RtlSymmetry">

                                <ImageView
                                    android:layout_width="@dimen/dp_24"
                                    android:layout_height="@dimen/dp_24"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginHorizontal="@dimen/dp_16"
                                    android:padding="@dimen/dp_2"
                                    android:src="@drawable/ic_change_inventory"
                                    app:tint="@color/blue_500" />

                                <vn.techres.android.weather.widget.AppTextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1"
                                    android:text="@string/info"
                                    android:textSize="@dimen/sp_18"
                                    android:textColor="@color/black" />

                                <ImageView
                                    android:layout_width="@dimen/dp_32"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:src="@drawable/ic_next_white"
                                    tools:ignore="ContentDescription" />
                            </LinearLayout>

                             

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </FrameLayout>
</layout>